--- a/src/app/index.css
+++ b/src/app/index.css
@@ -197,3 +197,30 @@
 .platform-section-bg{
   background: radial-gradient(35.55% 100% at 49.58% 0%, rgba(177, 137, 255, 0.33) 0%, rgba(129, 68, 246, 0.13) 100%);
 }
+
+.referral-bg{
+  background: linear-gradient(90deg, rgba(183, 121, 245, 0.4) 0%, rgba(133, 71, 246, 0.2) 100%);
+}
+
+.two-fac-bg{
+  background: linear-gradient(90deg, rgba(183, 121, 245, 0.1) 0%, rgba(133, 71, 246, 0.05) 100%);
+}
+
+.two-fac-shadow{
+  box-shadow: 0px 46.05px 46.05px -34.53px #0F0F0F1A;
+}
+
+.all-sessions-bg{
+  background: linear-gradient(90deg, rgba(183, 121, 245, 0.04) 0%, rgba(133, 71, 246, 0.02) 100%);
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
