--- a/src/app/index.css
+++ b/src/app/index.css
@@ -224,3 +224,24 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+.faq-shadow{
+  box-shadow: 0px 18px 40px 5px #7090B01F;
+}
+
+.notify-shadow{
+  box-shadow: 0px -1px 0px 0px #34384C inset;
+}
+
+.tooltip-bg{
+  background: linear-gradient(90deg, rgba(183, 121, 245, 0.08) 0%, rgba(133, 71, 246, 0.04) 100%);
+}
+
+.border-gradient {
+  border-image-source: linear-gradient(143.44deg, rgba(208, 220, 255, 0.28) -1.16%, rgba(208, 220, 255, 0.025) 65.11%);
+  border-image-slice: 1;
+}
+
+.soon-shadow{
+  box-shadow: 0px 0px 1.59px 0px #DBC9FF inset;
+}
